--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>SoftLand Bootstrap Template - Index</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-
+    <base target="_blank" />
+    
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
