--- a/index.html
+++ b/index.html
@@ -491,19 +491,19 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#" id="bubbleTrails-:r1:">Pricing</a></li>
+                  <li><a href="#" id="bubbleTrails-:r2:">Features</a></li>
+                  <li><a href="#" id="bubbleTrails-:r3:">Blog</a></li>
+                  <li><a href="#" id="bubbleTrails-:r4:">Contact</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Team</a></li>
-                  <li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Todos</a></li>
-                  <li><a href="#">Events</a></li>
+                  <li><a href="#" id="bubbleTrails-:r5:">Team</a></li>
+                  <li><a href="#" id="bubbleTrails-:r6:">Collaboration</a></li>
+                  <li><a href="#" id="bubbleTrails-:r7:">Todos</a></li>
+                  <li><a href="#" id="bubbleTrails-:r8:">Events</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
