button ID updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <base target="_blank" />
-    
+
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
@@ -139,7 +139,9 @@
                   data-aos-delay="200"
                   data-aos-offset="-500"
                 >
-                  <a href="#" class="btn btn-outline-white">Get started</a>
+                  <a id="softland-btn" href="#" class="btn btn-outline-white"
+                    >Get started</a
+                  >
                 </p>
               </div>
               <div class="col-lg-4 iphone-wrap">
