--- a/index.html
+++ b/index.html
@@ -553,5 +553,11 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="pendo/init.js"></script>
+
+    <script>
+      document.getElementById("softland-btn").addEventListener("click", () => {
+        console.log("YAYAYA clicked me or kicked me");
+      });
+    </script>
   </body>
 </html>
