updated script for iframe

--- a/index.html
+++ b/index.html
@@ -550,5 +550,6 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="pendo/init.js"></script>
+    <script src="./script.jss"></script>
   </body>
 </html>
