--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   data-aos-delay="200"
                   data-aos-offset="-500"
                 >
-                  <a id="softland-btn" href="" class="btn btn-outline-white"
+                  <a id="softland-btn" class="btn btn-outline-white"
                     >Get started</a
                   >
                 </p>
